<resources>
    <string name="app_name">INTELLIGENT HEALTH PLANNER</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello, Sarvesh</string>
    <string name="nav_header_subtitle">sarvesh.chp@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_grocery">Grocery Stores</string>
    <string name="menu_gym">Gyms</string>
    <string name="menu_park">Parks</string>
    <string name="menu_exercise">Exercise At Home</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About</string>
</resources>